Updated latest changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AgenticAI - Real-World Agentic Data & Model Evaluation</title>
+    <title>H + AI Agentic SuperIntelligence</title>
     <meta
       name="description"
       content="Real-World Agentic Data & Model Evaluation Infrastructure for Modern AI Systems"
